css/style.css
/******
Reset
******/

* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

/******
Debug
******/
main div {
    border: 2px dotted black;
}


/******
Header
******/

header {
    width: 100%;
    background-color: #ff6900 ;
    position: fixed;
}


/******
Container
******/

.container {
    width: 1400px;
    margin: 0  auto;
}

nav.container {
    display: flex;
    color: #FFFFFF;
    justify-content: space-between;
    padding: 25px 0px;
    align-items: center;
}

nav.container img {
    width: 140px;
    height: 30px;
}

nav.container div {
    display: flex;
    gap: 10px;
}

main div.container {
    display: flex;
    padding-top: 130px;
    flex-direction: row;
    flex-wrap: wrap;
}

/******
Main
******/

.articles {
    height: 700px;
    width: calc(100% / 3);
    flex-shrink: 0;
    background-color: aqua;
    gap: 20px;
    position: relative;
    display: inline-block;
    
}

/******
Hover Article
******/

div.articles img {
    height: 645px;
    width: 100%;
}

.articles .img-top {
    display: none;
    position: absolute;
    top: 0;
    left: 0;
    z-index: 99;
}

.articles:hover .img-top {
    display: inline;
}

